[package]
name = "deno-argon2"
version = "0.9.2"
authors = ["Federico <code@fdionisi.me>"]
edition = "2018"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
deno = ["deno_core"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
bytes = { version = "1.0.1", features = ["serde"] }
deno_core = { version = "0.83.0", optional = true }
rust-argon2 = "1.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde-wasm-bindgen = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"], optional = true }
